2.0: 6/??/2024
	* Removed the ZipVersion which seemed artificial.  Replaced with major/minor numbers.
	* Renamed some methods around the version-needed and version-made getters and setters.
	* Renamed the ZipFileOutput.enableBufferedOutput() method to enableFileBuffering().
	* Changed some of the sizes returned to be longs to better handle 32-bit numbers.
	* Changed (and added) some fields in the ZipCentralFileEntry to support Zip64 widths.
	* Added some more fields to the ZipCentralDirectoryEndInfo class to support Zip64.
	* Added some fields to the ZipCentralFileEntry to support Zip64 widths. 
	* Added some methods to extract the ZipFileHeader and the ZipCentralDirectoryFileInfo fields from a File.
	* Added some support for Zip64 extra fields.
	* Added Zip64 central-directory end support and Zip64 end-locator object support.
	* Added iterators for the ZipFileHeader and ZipCentralDirectoryFileEntry sections.
	* Renamed the ZipFileInput.readFileData(File) methods to be readFileDataToFile().
	* Added support for file-header and directory-file-entry iterators.
	* Reduced the IO calls by using IO buffers.

1.1: 5/23/2024
	* Fixed some of the logic to allow us to control all bytes in the output Zip.
	* Fixed some of the logic which determined if a data-descriptor was necessary.
	* Added ZipCentralDirectoryEndInfo to be able to control the end structure.
	* Added ZipFileCopy example program which writes identical Zip files.
	* Added some default values to couple of the structures that can be overridden.

1.0: 5/22/2024
	* Fixed a problem with early stream-closing.  Surprised I didn't catch this earlier.
	* Started to add some code examples.

0.9: 5/21/2024
	* Added auto-skipping of file-data in ZipFileInput if you didn't read any data or didn't read to the end.
	* Added initial documentation.  Caused a lot of class renaming.
	* Renamed some modified date/time fields in the ZipFileHeader and ZipCentralDirectoryFileEntry.
	* Renamed DataDescriptor to ZipDataDescriptor.