@@ -1,4 +1,5 @@
 2.0: 6/??/2024
+	* Fixed problem with buffering that would generate improper or unnecessary data-descriptor.
 	* Removed the ZipVersion which seemed artificial.  Replaced with major/minor numbers.
 	* Renamed some methods around the version-needed and version-made getters and setters.
 	* Renamed the ZipFileOutput.enableBufferedOutput() method to enableFileBuffering().
